// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:Link:Placeholder matches the snapshot when format is desktopFooter 1`] = `
<span
  className="sc-bdVaJa iGZHJR"
  format="desktopFooter"
/>
`;

exports[`components:Link:Placeholder matches the snapshot when format is mobileFooter 1`] = `
<span
  className="sc-bdVaJa ejqgOn"
  format="mobileFooter"
/>
`;

exports[`components:Link:Placeholder matches the snapshot when format is mobileHeader 1`] = `
<span
  className="sc-bdVaJa jOjhFl"
  format="mobileHeader"
/>
`;

exports[`components:Link:Placeholder matches the snapshot when format is tabletFooter 1`] = `
<span
  className="sc-bdVaJa ejqgOn"
  format="tabletFooter"
/>
`;
